--- a/ApiSimulation/package.json
+++ b/ApiSimulation/package.json
@@ -5,6 +5,7 @@
     "devDependencies": {
         "grunt": "^1.0.0",
         "grunt-contrib-concat": "^1.0.0",
-        "grunt-contrib-watch": "^1.0.0"
+        "grunt-contrib-watch": "^1.0.0",
+        "grunt-contrib-uglify": "^1.0.1"
     }
 }
