--- a/ApiSimulation/ApiSimulation.csproj
+++ b/ApiSimulation/ApiSimulation.csproj
@@ -122,6 +122,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="Scripts\Dist\external.js" />
     <Content Include="Scripts\Lib\knockout.validation.js" />
     <Content Include="Scripts\Lib\moment.js" />
     <Content Include="Styles\Common\Common.css" />
@@ -143,7 +144,6 @@
       <LastGenOutput>ApiSimulation.cs</LastGenOutput>
     </Content>
     <Content Include="package.json" />
-    <Content Include="Scripts\Dist\external.js" />
     <Content Include="Scripts\Dist\internal.js" />
     <Content Include="Scripts\Lib\bootstrap.js" />
     <Content Include="Scripts\Lib\jquery-2.2.2.js" />
@@ -151,9 +151,12 @@
     <Content Include="Scripts\Lib\knockout.mapping-latest.js" />
     <Content Include="Scripts\Lib\knockout.viewmodel.2.0.3.js" />
     <Content Include="Styles\fonts\fontawesome-webfont.svg" />
-    <Content Include="Web.config" />
+    <Content Include="Web.config">
+      <SubType>Designer</SubType>
+    </Content>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Start\DateTimeBinder.cs" />
     <Compile Include="App_Start\MapperConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Businesses\BusinessBase.cs" />
@@ -222,13 +225,16 @@
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <ItemGroup>
-    <TypeScriptCompile Include="Scripts\Commons\Extensions.ts" />
-    <TypeScriptCompile Include="Scripts\Commons\Constants.ts" />
-    <TypeScriptCompile Include="Scripts\Commons\Helpers.ts" />
-    <TypeScriptCompile Include="Scripts\Models\IViewModel.ts" />
-    <TypeScriptCompile Include="Scripts\Models\Response.ts" />
-    <TypeScriptCompile Include="Scripts\Models\ResponseDetail.ts" />
-    <TypeScriptCompile Include="Scripts\Models\ViewModel.ts" />
+    <TypeScriptCompile Include="Scripts\Commons\Constants\Base64Constant.ts" />
+    <TypeScriptCompile Include="Scripts\Commons\Constants\ContentTypeConstant.ts" />
+    <TypeScriptCompile Include="Scripts\Commons\Extensions\KnockoutExtension.ts" />
+    <TypeScriptCompile Include="Scripts\Commons\Helpers\Base64Helper.ts" />
+    <TypeScriptCompile Include="Scripts\Commons\Helpers\ObservebleHelper.ts" />
+    <TypeScriptCompile Include="Scripts\Models\DTO\DTOBase.ts" />
+    <TypeScriptCompile Include="Scripts\Models\DTO\Response.ts" />
+    <TypeScriptCompile Include="Scripts\Models\DTO\ResponseDetail.ts" />
+    <TypeScriptCompile Include="Scripts\Models\ViewModel\AdminViewModel.ts" />
+    <TypeScriptCompile Include="Scripts\Models\ViewModel\ViewModelBase.ts" />
     <TypeScriptCompile Include="Scripts\Typings\ApiSimulator.d.ts" />
     <TypeScriptCompile Include="Scripts\Typings\bootstrap.d.ts" />
     <TypeScriptCompile Include="Scripts\Typings\jquery.d.ts" />
@@ -236,6 +242,7 @@
     <TypeScriptCompile Include="Scripts\Typings\knockout.mapping.d.ts" />
     <TypeScriptCompile Include="Scripts\Typings\knockout.validation.d.ts" />
     <TypeScriptCompile Include="Scripts\Typings\knockout.viewmodel.d.ts" />
+    <TypeScriptCompile Include="Scripts\Typings\moment.d.ts" />
     <TypeScriptCompile Include="Scripts\Views\Admin.ts" />
   </ItemGroup>
   <PropertyGroup>
