son test bulgusu

--- a/ApiSimulation/Web.config
+++ b/ApiSimulation/Web.config
@@ -41,8 +41,8 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <!--<add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pholocalsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
-    <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ApiSimulation;user id=Genel;password=1453;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pholocalsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <!--<add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ApiSimulation;user id=Genel;password=1453;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
