--- a/ApiSimulation/packages.config
+++ b/ApiSimulation/packages.config
@@ -16,4 +16,5 @@
   <package id="Microsoft.Net.Compilers" version="1.0.0" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net452" />
+  <package id="RazorEngine" version="3.8.1" targetFramework="net452" />
 </packages>
