--- a/ApiSimulation/ApiSimulation.csproj
+++ b/ApiSimulation/ApiSimulation.csproj
@@ -126,6 +126,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Content Include="DB\DB.sql" />
     <Content Include="Scripts\Dist\external.js" />
     <Content Include="Scripts\Lib\jquery.toaster.js" />
     <Content Include="Scripts\Lib\knockout.validation.js" />
@@ -173,6 +174,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Helpers\LoremIpsumHelper.cs" />
     <Compile Include="Models\DTO\Response.cs" />
     <Compile Include="Models\DTO\ResponseDetail.cs" />
     <Compile Include="Models\DTO\ResponseDetailBasic.cs" />
@@ -210,7 +212,6 @@
       <DependentUpon>ApiSimulation.edmx</DependentUpon>
     </Content>
     <Content Include="Views\Admin\List.cshtml" />
-    <Content Include="DB\Backup.bak" />
     <None Include="Properties\PublishProfiles\Default Settings.pubxml" />
     <Content Include="Styles\fonts\fontawesome-webfont.eot" />
     <Content Include="Styles\fonts\fontawesome-webfont.ttf" />
