--- a/ApiSimulation/Web.config
+++ b/ApiSimulation/Web.config
@@ -60,5 +60,10 @@
       <remove name="TRACEVerbHandler" />
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
+    <staticContent>
+      <remove fileExtension=".woff2"/>
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2"/>
+    </staticContent>
+
   </system.webServer>
 </configuration>
