--- a/ApiSimulation/ApiSimulation.csproj
+++ b/ApiSimulation/ApiSimulation.csproj
@@ -176,6 +176,7 @@
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Helpers\LoremIpsumHelper.cs" />
+    <Compile Include="Models\DTO\RequestLog.cs" />
     <Compile Include="Models\DTO\Response.cs" />
     <Compile Include="Models\DTO\ResponseDetail.cs" />
     <Compile Include="Models\DTO\ResponseDetailBasic.cs" />
@@ -225,6 +226,7 @@
     <Content Include="Views\Partial\_AdminTemplate.cshtml" />
     <Content Include="Views\Partial\_AdminHowToUse.cshtml" />
     <Content Include="Views\Partial\_AdminTemplateEngine.cshtml" />
+    <Content Include="Views\Admin\LogDetail.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
