--- a/ApiSimulation/ApiSimulation.csproj
+++ b/ApiSimulation/ApiSimulation.csproj
@@ -237,9 +237,7 @@
       <DependentUpon>Web.config</DependentUpon>
     </None>
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Scripts\Commons\Extensions\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
     <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
@@ -247,7 +245,7 @@
   <ItemGroup>
     <TypeScriptCompile Include="Scripts\Commons\Constants\Base64Constant.ts" />
     <TypeScriptCompile Include="Scripts\Commons\Constants\ContentTypeConstant.ts" />
-    <TypeScriptCompile Include="Scripts\Commons\Helpers\KnockoutExtension.ts" />
+    <TypeScriptCompile Include="Scripts\Commons\Extensions\KnockoutExtension.ts" />
     <TypeScriptCompile Include="Scripts\Commons\Helpers\Base64Helper.ts" />
     <TypeScriptCompile Include="Scripts\Commons\Helpers\ObservebleHelper.ts" />
     <TypeScriptCompile Include="Scripts\Models\DTO\DTOBase.ts" />
