--- a/ApiSimulation/Web.config
+++ b/ApiSimulation/Web.config
@@ -21,7 +21,7 @@
 
 
     <customErrors mode="Off"/>
-    
+
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
   </system.web>
@@ -58,6 +58,14 @@
     </providers>
   </entityFramework>
   <system.webServer>
+
+    <security>
+      <authentication>
+        <windowsAuthentication enabled="true" />
+        <anonymousAuthentication enabled="true" />
+      </authentication>
+    </security>
+
     <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
