--- a/ApiSimulation/Web.config
+++ b/ApiSimulation/Web.config
@@ -19,7 +19,6 @@
   </appSettings>
   <system.web>
 
-
     <customErrors mode="Off"/>
 
     <compilation debug="true" targetFramework="4.5.2" />
@@ -48,7 +47,7 @@
     </compilers>
   </system.codedom>
   <connectionStrings>
-    <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pholocalsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+    <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=albilsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <!--<add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ApiSimulation;user id=Genel;password=1453;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
   </connectionStrings>
   <entityFramework>
