--- a/ApiSimulation/Web.config
+++ b/ApiSimulation/Web.config
@@ -19,7 +19,7 @@
   </appSettings>
   <system.web>
 
-    <customErrors mode="Off"/>
+    <customErrors mode="Off" />
 
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
@@ -46,9 +46,9 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-    <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=albilsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-    <!--<add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ApiSimulation;user id=Genel;password=1453;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <connectionStrings><!--<add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\SQLEXPRESS;initial catalog=ApiSimulation;user id=Genel;password=1453;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />-->
+  <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=albilsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  
   </connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
@@ -72,8 +72,8 @@
       <add name="ExtensionlessUrlHandler-Integrated-4.0" path="*." verb="*" type="System.Web.Handlers.TransferRequestHandler" preCondition="integratedMode,runtimeVersionv4.0" />
     </handlers>
     <staticContent>
-      <remove fileExtension=".woff2"/>
-      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2"/>
+      <remove fileExtension=".woff2" />
+      <mimeMap fileExtension=".woff2" mimeType="application/font-woff2" />
     </staticContent>
 
   </system.webServer>
