--- a/ApiSimulation/Web.config
+++ b/ApiSimulation/Web.config
@@ -58,11 +58,7 @@
       <compiler language="vb;vbs;visualbasic;vbscript" extension=".vb" type="Microsoft.CodeDom.Providers.DotNetCompilerPlatform.VBCodeProvider, Microsoft.CodeDom.Providers.DotNetCompilerPlatform, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" warningLevel="4" compilerOptions="/langversion:14 /nowarn:41008 /define:_MYTYPE=\&quot;Web\&quot; /optionInfer+" />
     </compilers>
   </system.codedom>
-  <connectionStrings>
-   
-    <add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=albilsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
-
-  </connectionStrings>
+  <connectionStrings><add name="ApiSimulationEntities" connectionString="metadata=res://*/Models.EF.ApiSimulation.csdl|res://*/Models.EF.ApiSimulation.ssdl|res://*/Models.EF.ApiSimulation.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=albilsql01.albil.com.tr;initial catalog=ApiSimulation;user id=mobileapp;password=mobileapp@2015;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /><add name="PHO_PARTEntities" connectionString="metadata=res://*/Models.EF.PHO_PART.csdl|res://*/Models.EF.PHO_PART.ssdl|res://*/Models.EF.PHO_PART.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=pholocalsql01.albil.com.tr;initial catalog=PHO_PART;persist security info=True;user id=mobileappuser;password=mobileappuser@2016;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
     <providers>
